# agentpulse

./: .dockerignore  .editorconfig  .env.example  .gitignore  .novita_task.py  .novita_verify.py  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHIVES.md  CHANGELOG.md  CLAUDE_LANE_COPY.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GROK_LANE_GTM.md  LICENSE  Makefile  README.md  SECURITY.md  STATUS.md  STRIPE_SETUP_INSTRUCTIONS.md  _config.yml  docker-compose.dev.yml  docker-compose.yml  fly.toml  phase2_exit_test.py  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: deploy_backend.yml  integration.yml  pages.yml  release.yml  security.yml  test-agent.yml  test-backend.yml  test-dashboard.yml  test.yml
agent/: CONFIGURATION.md  README.md  agentpulse.config.example.json  agentpulse.config.local.json
agent/agentpulse/: __init__.py  __main__.py  assets.py  audit.py  baseline.py  checkin.py  checks.py  cli.py  config.py  control_plane.py  dashboard.py  decision_loop.py  federation.py  identity.py  launchd.py  locking.py  models.py  notify.py  ouroboros.py  policy.py  redaction.py  remediation.py  retry.py  runner.py  spool.py  state.py
agent/packaging/: com.agentpulse.agent.plist
agent/systemd/: agentpulse-dashboard.service  agentpulse.service
agent/tests/: test_audit_agent.py  test_baseline.py  test_checkin.py  test_checkin_trust.py  test_checks.py  test_cli.py  test_config.py  test_control_plane.py  test_decision_loop.py  test_deny.py  test_fuzz.py  test_identity.py  test_locking.py  test_ouroboros.py  test_policy.py  test_redaction.py  test_remediation.py  test_retry.py  test_runner.py  test_spool.py  test_state.py
agent/tools/: run_tests.py
backend/: .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/agentpulse_backend/: __init__.py  app.py  cli.py  settings.py  store.py
backend/agentpulse_backend/api/: __init__.py
backend/agentpulse_backend/api/routes/: agents.py  audit.py  checkin.py  enrollment.py  incidents.py
backend/agentpulse_backend/database/: __init__.py  connection.py  migrations.py
backend/agentpulse_backend/repositories/: __init__.py  agent.py  audit.py  checkin.py  incident.py
backend/agentpulse_backend/schemas/: __init__.py
backend/migrations/: 001_initial_schema.sql
backend/tests/: test_app.py  test_store.py
configs/: agentpulse.config.schema.json
configs/environments/: development.env.example
configs/policies/: default.json  production-safe.json
control-plane/: .dev.vars.example  .gitignore  ARCHITECTURE.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
control-plane/migrations/: 0001_initial.sql
control-plane/src/: index.ts
control-plane/test/: apply-migrations.ts  control-plane.test.ts  test-env.d.ts
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.app.json  vite.config.ts
dashboard/backend/: requirements.txt
dashboard/backend/app/: main.py
dashboard/frontend/: package-lock.json  package.json  tailwind.config.ts
dashboard/frontend/src/: App.tsx  index.css
dashboard/frontend/src/api/: client.ts  types.ts
dashboard/frontend/src/components/: ui.tsx
dashboard/frontend/src/hooks/: useFetch.ts
dashboard/frontend/src/lib/: format.ts
dashboard/frontend/src/pages/: ServerDetailPage.tsx
dashboard/pulse_server/: __init__.py  actions.py  billing.py  db.py  ingest.py  main.py
dashboard/realtime/: wrangler.toml
dashboard/realtime/src/: index.ts
dashboard/shared/: types.ts
dashboard/src/: App.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/auth/: credential.ts
dashboard/src/components/: ui.tsx
dashboard/src/lib/: format.ts
dashboard/src/pages/: ConnectPage.tsx  IncidentDetailPage.tsx  IncidentListPage.tsx  ServerInventoryPage.tsx
dashboard/tests/: test_billing.py  test_server.py
dashboard/web/: package-lock.json  package.json  vite.config.ts
dashboard/web/src/: App.tsx  index.css
dashboard/web/src/components/: ActivityTimeline.tsx  MetricsPanel.tsx  PendingList.tsx  StatCards.tsx  TopBar.tsx
dashboard/web/src/lib/: api.ts  time.ts  types.ts  useLive.ts
docs/: CNAME  _config.yml  blog.md  deploy_aws.md  escape-datadog.md  features.md  health.json  index.md  install.md  install.sh  pricing.md  privacy.md  robots.txt  signup.md  terms.md  vs-better-stack.md  vs-datadog.md  vs-grafana.md  vs-netdata.md  vs-new-relic.md  vs-uptime-kuma.md
docs/.well-known/: api-catalog
docs/.well-known/agent-skills/: index.json
docs/.well-known/agent-skills/agentpulse-status/: SKILL.md
docs/_includes/: install.html
docs/_layouts/: default.html
docs/api/: index.md
docs/api/health/: index.html
docs/assets/css/: style.scss
docs/assets/js/: site.js
docs/blog/: alerts-not-enough.md  auto-remediation-guide.md  how-agentpulse-decides.md  server-monitoring-cost-guide.md  tired-of-3am-pages.md
docs/consolidation/: README.md  baseline-results.md  ideal-structure-gap.md  source-inventory.md  verification-report.md
docs/planning/: AGENTPULSE-COMPLETION-PLAN.md  AGENTPULSE-FINISHED-PRODUCT-MATRIX.md
docs/plans/: 2026-07-10-dashboard-service.md
docs/runbooks/: agent-release-rollback.md  agentpulse-tier1-phase1c-evidence.md
infra/aws/: acm.tf  alb_https.tf  cloudflare.tf  main.tf  outputs.tf  variables.tf
load-tests/: agentpulse-public.js
observability/grafana/provisioning/dashboards/: api.json
observability/grafana/provisioning/datasources/: datasources.yaml
observability/prometheus/: prometheus.yml  recording-rules.yml
scripts/: bootstrap-dev.sh  check-launchd-plist.py  install-agent.sh  rollback-agent.sh  smoke-test.sh  uninstall-agent.sh  upgrade-agent.sh  validate-contracts.py
tests/: test_agent_discovery.py  test_packaging.py
