[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpulse"
version = "0.1.0"
description = "Local-first server remediation with a bounded Cloudflare control plane"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "AgentPulse Team", email = "support@agentpulse.ca" }]
homepage = "https://agentpulse.ca"
repository = "https://github.com/strouddustinn-bot/agentpulse"
keywords = ["server-remediation", "sre", "infrastructure", "incident-response"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]

[tool.hatch.build.targets.sdist]
include = ["/agent", "/control-plane", "/dashboard", "/packages", "/configs", "/scripts", "/docs"]

[tool.hatch.build.targets.wheel]
packages = []

[tool.ci]
agent = { path = "agent", python = "3.10-3.13" }
control-plane = { path = "control-plane" }
dashboard = { path = "dashboard" }
contracts = { path = "packages/contracts" }
