[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpulse-backend"
version = "0.1.0"
description = "AgentPulse backend API for agent check-ins, fleet status, and license verification."
requires-python = ">=3.10"
authors = [
  { name = "Dustinn Stroud", email = "strouddustinn@gmail.com" }
]
license = "Apache-2.0"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
]

[tool.setuptools]
packages = ["agentpulse_backend"]

[project.scripts]
agentpulse-backend = "agentpulse_backend.cli:main"
